--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/main.css">        
     <title>Grlflix - Empowering women movies</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <h2 class="logo">Grlflix</h2>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Series</a>
+                <a href="#">Movies</a>
+                <a href="#">Docs</a>
+            </nav>
+        </div>
+    </header>
+    <footer></footer>
 </body>
 </html>
