--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/main.css">        
+
+    <link rel="stylesheet" href="style/main.css">    
+
     <title>Grlflix - Empowering women movies</title>
 </head>
 <body>
@@ -28,9 +30,11 @@
             </div>
             <div class="buttons">
                 <button role="button" class="botao">
+                    <i class="fas fa-play"></i>
                     WATCH NOW
                 </button>
                 <button role="button" class="botao">
+                    <i class="fas fa-info-circle"></i>
                     MORE INFORMATION
                 </button>
             </div>
@@ -38,5 +42,9 @@
         </div>
     </main>
     <footer></footer>
+
+    
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
