--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style/main.css">    
-
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
     <title>Grlflix - Empowering women movies</title>
 </head>
 <body>
@@ -41,10 +42,19 @@
                         
         </div>
     </main>
+
+    <div class="movies-carousel">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img src="" alt="">
+            </div>
+        </div>
+    </div>
     <footer></footer>
 
     
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/jquery.min.js"></script>
 </body>
 </html>
